# agile-pm

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  migrations.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
benchmarks/: bench_agent_startup.py  bench_memory_ops.py  bench_task_planning.py  config.py  run_benchmarks.py
docker/postgres/: init.sql
docker/redis/: redis.conf
docker/worker/: Dockerfile.worker
docs/: API_REFERENCE.md  PROVIDER_ADAPTERS.md
docs/api/: README.md  authentication.md  errors.md
docs/deployment/: RUNBOOK.md  SECRETS.md
docs/guides/: configuration.md  getting-started.md
docs/monitoring/: README.md
docs/plugins/: README.md  architecture.md  configuration.md  creating-plugins.md  hooks-reference.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
governance/roles/: ACCOUNTING_SPECIALIST_AGENT.md  AGILE_CONSULTANT_AGENT.md  AGILE_EXPERTS_AGENT.md  AI_ENGINEER_AGENT.md  AI_REVIEWER_AGENT.md  ANALYTICS_ENGINEER_AGENT.md  ANALYTICS_REVIEWER_AGENT.md  ARCHITECTURE_REVIEWER_AGENT.md  ARCHITECT_AGENT.md  AUTHORITY_MATRIX.md  BACKEND_ENGINEER_AGENT.md  BACKEND_REVIEWER_AGENT.md  COMPLIANCE_EXECUTOR_AGENT.md  COMPLIANCE_REVIEWER_AGENT.md  DATABASE_ENGINEER_AGENT.md  DATA_ARCHITECT_AGENT.md  DATA_REVIEWER_AGENT.md  DEEP_RESEARCH_AGENT.md  DELIVERY_OPERATIONS_AGENT.md  DEVOPS_EXECUTOR_AGENT.md  DEVOPS_REVIEWER_AGENT.md  FINANCIAL_SPECIALIST_AGENT.md  FRONTEND_ENGINEER_AGENT.md  FRONTEND_REVIEWER_AGENT.md  HUMAN_BOARD_FOUNDER.md  HUMAN_NON_TECHNICAL_PM.md  HUMAN_PRODUCT_OWNER.md  HUMAN_TECHNICAL_PM.md  LEGAL_ADVISOR_AGENT.md  MOBILE_ENGINEER_AGENT.md  MOBILE_REVIEWER_AGENT.md  PROMPT_ENGINEERING_EXPERT_AGENT.md  QA_EXECUTOR_AGENT.md  QA_REVIEWER_AGENT.md  SECURITY_EXECUTOR_AGENT.md  SECURITY_REVIEWER_AGENT.md  TECHNICAL_WRITER_AGENT.md  TECHNICAL_WRITER_REVIEWER_AGENT.md  UX_RESEARCHER_AGENT.md  UX_REVIEWER_AGENT.md
helm/agile-pm/: Chart.yaml  README.md  values.yaml
k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
load-tests/: k6-test.js
monitoring/grafana/: agile-pm-dashboard.json
monitoring/loki/: loki-config.yml
monitoring/prometheus/: alert-rules.yml
monitoring/promtail/: promtail-config.yml
scripts/: create_sprint06_files.py  create_sprint06_part2.py
src/agile_pm/: __init__.py  models.py  worker.py
templates/: review-template.md  sprint-template.md  task-template.md
tests/: conftest.py  test_config.py  test_crewai_crew.py  test_langchain_agent.py  test_memory.py  test_models.py  test_project.py  test_resilience.py  test_security.py
tests/api/: conftest.py  test_app.py
tests/crews/: __init__.py  test_crews.py
tests/dashboard/: test_dashboard.py
tests/e2e/: conftest.py  test_memory_roundtrip.py  test_multi_agent.py  test_sprint_planning.py  test_task_execution.py
tests/fixtures/: mock_sprint.json  mock_tasks.json
tests/integration/: conftest.py  (+5 more)
(+202 files in other folders)
